--- a/index.html
+++ b/index.html
@@ -9,13 +9,10 @@
 <body>
     <h1>COURS GITHUB</h1>
     <h2>Version 2</h2>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
-        Aliquid soluta excepturi odit suscipit. Dignissimos cumque
-         reprehenderit recusandae! Tenetur facilis maxime quos doloremque, et 
-         corporis voluptate perferendis possimus! Eaque, eligendi ipsa.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo ipsa, eum iste quod 
-        pariatur voluptates inventore quibusdam quos, nisi veritatis repellendus amet! Possimus
-         corrupti nisi, ex ipsum in explicabo maiores illo sequi optio, deleniti 
-        reprehenderit totam expedita, temporibus officia architecto!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem
+         non nulla veritatis doloremque dolorum provident beatae qui tempora porro animi?</p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Labore sunt impedit 
+        minima porro culpa perferendis accusamus, recusandae, delectus iusto consectetur amet delenit
+         tempore quis eos sapiente molestias? Numquam, eos pariatur.</p>
 </body>
 </html>
